--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -14,7 +14,7 @@
         android:background="@color/purple_500">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/grid_answer"
+            android:id="@+id/gridAnswer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
@@ -22,7 +22,7 @@
             android:layout_weight="3"></androidx.recyclerview.widget.RecyclerView>
 
         <TextView
-            android:id="@+id/txt_timer"
+            android:id="@+id/tvTimer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="8dp"
-            android:layout_toRightOf="@id/grid_answer"
+            android:layout_toRightOf="@id/gridAnswer"
             android:text="0/10"
             android:textColor="@color/white"
             android:textSize="24dp"
