--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,18 +5,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".UI.LoginActivity">
 
     <Button
-        android:id="@+id/btnStartMainActivity"
+        android:id="@+id/btnStartMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="Start main Activity"
+        android:onClick="startMain"
         android:layout_margin="15dp"
-        android:onClick="startMainActivity"
-        android:text="Start Activity"
+        android:background="@drawable/main_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
