--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -76,6 +76,7 @@
         android:layout_marginRight="25dp" />
 
     <RadioGroup
+        android:id="@+id/rbGroupQuestion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -129,7 +130,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="50dp"
         android:weightSum="3">
 
         <Button
