--- a/app/src/main/res/layout/fragment_result_test.xml
+++ b/app/src/main/res/layout/fragment_result_test.xml
@@ -5,16 +5,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.ResultTestFragment">
+    tools:context=".UI.ResultTestFragment"
+    android:background="@color/mainBackground">
 
-    <TextView
-        android:id="@+id/tvResult"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment"
+        android:layout_margin="50dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/result"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/reef"
+            android:text="Результат теста:"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:layout_marginBottom="10dp"
+            android:textSize="24dp" />
+
+        <TextView
+            android:id="@+id/tvResult"
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/reef"
+            android:text="0"
+            android:textColor="@color/white"
+            android:textSize="60sp"
+            android:background="@drawable/rbgroup"/>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
