--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -1,24 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/linearLayout_main"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/mainBackground"
-    tools:context=".UI.TestFragment"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:gravity="center"
+    android:orientation="vertical"
+    tools:context=".UI.TestFragment">
 
     <TextView
         android:id="@+id/tvTimer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="25dp"
+        android:fontFamily="@font/reef"
         android:text="00:00"
         android:textAlignment="textEnd"
         android:textColor="@color/white"
-        android:textSize="24dp"
+        android:textSize="26dp"
         android:textStyle="bold" />
 
     <LinearLayout
@@ -34,30 +34,33 @@
         android:id="@+id/progressDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
-        android:layout_marginTop="16dp">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+
         <ProgressBar
             android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:max="10"
-            android:minHeight="50dp"
-            android:progress="0"
             android:indeterminate="false"
-            style="?android:attr/progressBarStyleHorizontal" />
+            android:max="10"
+            android:progressTint="@color/white"
+            android:minHeight="50dp"
+            android:progress="0" />
+
         <TextView
             android:id="@+id/rightAns"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/reef"
             android:gravity="center"
             android:padding="15dp"
-            android:textSize="14sp"
             android:text="0/10"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:textSize="18sp" />
     </LinearLayout>
 
     <TextView
@@ -65,23 +68,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="25dp"
-        android:textSize="18dp"
-        android:textStyle="bold"
+        android:fontFamily="@font/reef"
+        android:text="Question"
         android:textColor="@color/white"
-        android:text="Question" />
+        android:textSize="18dp" />
 
     <ImageView
         android:id="@+id/imgQuestion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
         android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp" />
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="25dp" />
 
     <RadioGroup
         android:id="@+id/rbGroupQuestion"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp">
 
         <RadioButton
             android:id="@+id/rbAnsA"
@@ -89,8 +94,11 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:text="Answer A"
+            android:fontFamily="@font/reef"
+            android:buttonTint="@color/white"
             android:tag="1"
+            android:text="Answer A"
+            android:textSize="16sp"
             android:textColor="@color/white" />
 
         <RadioButton
@@ -99,7 +107,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:fontFamily="@font/reef"
+            android:buttonTint="@color/white"
             android:text="Answer B"
+            android:textSize="16sp"
             android:textColor="@color/white" />
 
         <RadioButton
@@ -108,7 +119,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:buttonTint="@color/white"
+            android:fontFamily="@font/reef"
             android:text="Answer C"
+            android:textSize="16sp"
             android:textColor="@color/white" />
 
         <RadioButton
@@ -117,7 +131,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:fontFamily="@font/reef"
+            android:buttonTint="@color/white"
             android:text="Answer D"
+            android:textSize="16sp"
             android:textColor="@color/white" />
 
         <RadioButton
@@ -126,15 +143,18 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:fontFamily="@font/reef"
+            android:buttonTint="@color/white"
             android:text="Answer E"
+            android:textSize="16sp"
             android:textColor="@color/white" />
     </RadioGroup>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="50dp"
+        android:orientation="horizontal"
         android:weightSum="3">
 
         <Button
@@ -143,18 +163,24 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="25dp"
             android:layout_weight="1"
-            android:background="@drawable/main_btn"
-            android:text="back" />
+            android:background="@drawable/btn"
+            android:fontFamily="@font/reef"
+            android:text="back"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/btnSkip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             android:layout_weight="1"
-            android:background="@drawable/main_btn"
-            android:text="skip" />
+            android:background="@drawable/btn"
+            android:fontFamily="@font/reef"
+            android:text="skip"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/btnNext"
@@ -162,8 +188,68 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="25dp"
             android:layout_weight="1"
-            android:background="@drawable/main_btn"
-            android:text="next" />
+            android:background="@drawable/btn"
+            android:fontFamily="@font/reef"
+            android:text="next"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        android:weightSum="3">
+
+        <Button
+            android:id="@+id/btnBack2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_weight="1"
+            android:background="@drawable/btn"
+            android:fontFamily="@font/reef"
+            android:paddingLeft="20dp"
+            android:paddingRight="25dp"
+            android:textStyle="bold"
+            android:drawableLeft="@drawable/ic_back"
+            android:text="back"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btnSkip2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_weight="1"
+            android:paddingLeft="25dp"
+            android:paddingRight="25dp"
+            android:drawableRight="@drawable/ic_skip"
+            android:background="@drawable/btn"
+            android:fontFamily="@font/reef"
+            android:text="skip"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btnNext2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="25dp"
+            android:layout_weight="1"
+            android:paddingLeft="25dp"
+            android:paddingRight="20dp"
+            android:drawableRight="@drawable/ic_next"
+            android:background="@drawable/btn"
+            android:fontFamily="@font/reef"
+            android:textStyle="bold"
+            android:text="next"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
