--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ic_bg"
+    android:background="@drawable/logo_load"
     tools:context=".UI.SplashScreen">
 
     <TextView
@@ -15,7 +15,7 @@
         android:text="v. 0.0.8"
         android:textColor="@color/white"
         android:textSize="20dp"
-        android:fontFamily="@font/guerrilla"
+        android:fontFamily="@font/reef"
         android:layout_marginBottom="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
