--- a/app/src/main/res/layout/fragment_result_test.xml
+++ b/app/src/main/res/layout/fragment_result_test.xml
@@ -31,14 +31,14 @@
 
         <TextView
             android:id="@+id/tvResult"
-            android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/rbgroup"
             android:fontFamily="@font/reef"
             android:text="0"
+            android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="60sp"
-            android:background="@drawable/rbgroup"/>
+            android:textSize="48sp" />
 
     </LinearLayout>
 
