--- a/app/src/main/res/layout/fragment_result_test.xml
+++ b/app/src/main/res/layout/fragment_result_test.xml
@@ -40,6 +40,46 @@
             android:textColor="@color/white"
             android:textSize="48sp" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginTop="150dp"
+            android:weightSum="2">
+
+            <Button
+                android:id="@+id/btnRestart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/btn"
+                android:drawableLeft="@drawable/ic_restart"
+                android:fontFamily="@font/reef"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:text="restart"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/btnGoToMenu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/btn"
+                android:drawableLeft="@drawable/ic_menu"
+                android:fontFamily="@font/reef"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:text="В меню"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
