--- a/app/src/main/res/layout/fragment_global_results.xml
+++ b/app/src/main/res/layout/fragment_global_results.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/mainBackground"
-    tools:context=".GlobalResultsFragment">
+    tools:context=".UI.results.GlobalResultsFragment">
 
     <TextView
         android:id="@+id/tvGlobalResult"
