--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -3,21 +3,22 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
+    android:layout_height="wrap_content"
     android:background="@color/mainBackground"
     android:padding="16dp">
 
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_margin="15dp"
         android:src="@drawable/logo_main" />
     <TextView
+        android:id="@+id/userNameHead"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="STesting user"
         android:textStyle="bold"
+        android:layout_marginStart="15dp"
         android:textSize="20dp"
-        android:textColor="@color/white"
-        android:id="@+id/userNameHead" />
+        android:textColor="@color/white" />
 
 </LinearLayout>
