--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="mainBackground">#FF243346</color>
+    <color name="firstBackground">#294363</color>
     <color name="mainColorBtn">#FF344D6A</color>
     <color name="rbColor">#22243346</color>
 </resources>
